--- a/new-ui.css
+++ b/new-ui.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
- 
+ .tooltip{
+   background-color:red !important;
+ }
 body{
  background-color: #fbfbfb !important;
  font-family: 'Poppins', sans-serif!important;
