--- a/new-ui.css
+++ b/new-ui.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
  .tooltip{
-   background-color:red !important;
+   background-color:green !important;
  }
 body{
  background-color: #fbfbfb !important;
