--- a/new-ui.css
+++ b/new-ui.css
@@ -1237,6 +1237,16 @@ font-size: 18px;
 #sb-tour-ready-publish a{
  border-radius: 5px;
 }
+/*publish tab  css end*/
+
+/*user info  css start */
+#information{
+ border-radius: 10px;
+    box-shadow: 0 3px 6px 2px #d3d3d3ba;
+}
+#information .col-md-3,#information .col-md-9{
+  width: 100%!important;
+}
 
 @media only screen and (max-width: 991px) {
 .dashboard {
