--- a/new-ui.css
+++ b/new-ui.css
@@ -1246,8 +1246,11 @@ font-size: 18px;
 }
 #information .col-md-3,#information .col-md-9{
   width: 100%!important;
+ text-align: left;
 }
-
+#information .content-color,#change_password .content-color{
+ background-color: #fff !important;
+}
 @media only screen and (max-width: 991px) {
 .dashboard {
     display: block;
