--- a/new-ui.css
+++ b/new-ui.css
@@ -1247,7 +1247,10 @@ font-size: 18px;
 #information .col-md-3,#information .col-md-9,#change_password .col-md-3,#change_password .col-md-9{
   width: 100%!important;
  text-align: left;
- margin-left:0px;
+
+}
+#information .col-md-offset-2{
+  margin-left:0px;
 }
 #information .content-color,#change_password .content-color{
  background-color: #fff !important;
@@ -1264,6 +1267,7 @@ font-size: 18px;
  height:10px;
  width:3px;
  border-redius:5px;
+  background-color: #000!important;
 }
 @media only screen and (max-width: 991px) {
 .dashboard {
