--- a/new-ui.css
+++ b/new-ui.css
@@ -1240,6 +1240,9 @@ font-size: 18px;
 /*publish tab  css end*/
 
 /*user info  css start */
+#editForm .col-md-6{
+   width: 100%!important;
+}
 #information,#change_password{
  border-radius: 10px;
     box-shadow: 0 3px 6px 2px #d3d3d3ba;
@@ -1257,7 +1260,7 @@ font-size: 18px;
 }
 #information .title-editor,#change_password .title-editor{
  color: #2c2e3e!important;
- border-bottom:none;
+ border-bottom:none!important;
 }
 #information .title-edito:after{
  content:'';
