--- a/new-ui.css
+++ b/new-ui.css
@@ -201,7 +201,13 @@ input[type=range].sb-slider:focus::-ms-fill-lower {
 input[type=range].sb-slider:focus::-ms-fill-upper {
     background: #5277ff;
 }
-
+select.styled-select{
+ -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-size: 20px;
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e);
+}
 /*login css start */
 #login_container {
     max-width: 700px;
