--- a/new-ui.css
+++ b/new-ui.css
@@ -835,6 +835,9 @@ width:50%!important;
     background-color: transparent!important;
 padding:0px;
 }
+#behavior_container{
+  background-color: #fff!important;	
+}
 #homepage_content h4.toggle-overlay{
 text-align: left!important;
     text-transform: capitalize!important;	
