--- a/new-ui.css
+++ b/new-ui.css
@@ -816,6 +816,7 @@ width: 100%!important;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #efefef;
+	flex-wrap: wrap;
 }
 #modal_details_preview ul li{
 width: auto!important;	
@@ -824,6 +825,9 @@ width: auto!important;
 }
 #modal_details_preview ul li a{
 text-transform: capitalize!important;
+}
+#modal_details_preview ul li .change_category.color-red{
+ background-color: transparent!important;	
 }
 #modal_details_preview ul li.active{
 border-radius: 50px;	
