--- a/new-ui.css
+++ b/new-ui.css
@@ -829,12 +829,15 @@ text-transform: capitalize!important;
 #modal_details_preview h3.title-editor.border-red.text-center,#modal_details_modal_layouts h3.title-editor.border-red.text-center{
 padding:20px!important;
 }
-#modal_details_preview ul li .change_category.color-red{
+#modal_details_preview ul li.change_category.color-red{
  background-color: transparent!important;	
 }
-#modal_details_preview ul li .change_category.color-red:hover{
+#modal_details_preview ul li.change_category.color-red:hover{
  background-color: transparent!important;
 	color:#5277ff;
+}
+#modal_details_preview ul li.change_category.color-red a:active{
+color:#5277ff !important	
 }
 #modal_details_preview ul li.active,#modal_details_modal_layouts  ul li.active{
 border-radius: 50px;	
