--- a/new-ui.css
+++ b/new-ui.css
@@ -844,7 +844,9 @@ color:#5277ff !important
  background-color: #5277ff!important;
 color:#fff !important	
 }
-
+#modal_details_preview ul li.change_category.color-red a:active{
+color:#5277ff !important	
+}
 #modal_details_preview ul li.active,#modal_details_modal_layouts  ul li.active{
 border-radius: 50px;
 	 background-color: #5277ff !important;
