--- a/new-ui.css
+++ b/new-ui.css
@@ -847,7 +847,7 @@ color:#fff !important
 .modal_details ul li.change_category.color-red a:active{
 color:#5277ff !important	
 }
-.modal_details ul li.active,#modal_details_modal_layouts  ul li.active{
+.modal_details ul li.active{
 border-radius: 50px;
 	 background-color: #5277ff !important;
 color:#fff !important;	
