--- a/new-ui.css
+++ b/new-ui.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-.tooltip-inner { background-color:#eef1ff!important;}
+.tooltip .tooltip-inner {
+	background-color:#eef1ff!important;
+	color:#2c2e3e!important;
+}
+.tooltip .arrow{
+background-color:#eef1ff!important;	
+}
+
 body{
  background-color: #fbfbfb !important;
  font-family: 'Poppins', sans-serif!important;
