--- a/new-ui.css
+++ b/new-ui.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap');
 
 
 body{
  background-color: #fbfbfb !important;
- font-family: 'Poppins', sans-serif!important;
+/*  font-family: 'Poppins', sans-serif!important; */
+font-family: 'Manrope', sans-serif!important;
 }
 /*global  css start */
 .tooltip .tooltip-inner {
