--- a/new-ui.css
+++ b/new-ui.css
@@ -1,6 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 body{
  background-color: #fbfbfb !important;
