--- a/new-ui.css
+++ b/new-ui.css
@@ -253,6 +253,16 @@ body::-webkit-scrollbar-thumb,.modal_details::-webkit-scrollbar-thumb{
 .login-left-side{
 display:none;	
 }
+.login-right-side {
+    background-color: transparent;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+}
 #login_container #ul_languages,#login_container br,#login_container .logo_container,#login_container h1,#login_container hr{
 display:none;
 }
