--- a/new-ui.css
+++ b/new-ui.css
@@ -239,6 +239,9 @@ body::-webkit-scrollbar-thumb,.modal_details::-webkit-scrollbar-thumb{
 }
 
 /*login css start */
+#ul_languages{
+	display:none;
+}
 #login_container {
     max-width: 700px;
     min-width: 300px;
