--- a/new-ui.css
+++ b/new-ui.css
@@ -320,7 +320,7 @@ body.admin_account_login:after {
     position: absolute;
     top: 0px;
     right: 0px;
-    background-image: url(https://i.postimg.cc/8PPSdcHN/login-art-work.png);
+    background-image: url(./login-art-work.png);
     background-repeat: no-repeat;
     background-position: top right;
     z-index: -1;
