--- a/new-ui.css
+++ b/new-ui.css
@@ -534,7 +534,7 @@ content: '';
     position: absolute;
     top: 20px;
     right: 25px;
-    background-image: url(https://i.postimg.cc/QNvsLn4H/view-icon.png);
+    background-image: url(./view-icon.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 70%;
@@ -546,7 +546,7 @@ content: '';
     position: absolute;
     top: 20px;
     right: 25px;
-    background-image: url(https://i.postimg.cc/9f1bTKRb/download-icon.png);
+    background-image: url(./download-icon.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 70%;
