--- a/new-ui.css
+++ b/new-ui.css
@@ -485,7 +485,7 @@ content: '';
     position: absolute;
     top: 5px;
     left: 15px;
-    background-image: url(https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1);
+    background-image: url(./logo.webp);
     background-repeat: no-repeat;
     background-position: left center;
     z-index: 999;
