--- a/new-ui.css
+++ b/new-ui.css
@@ -14,6 +14,9 @@ font-family: 'Manrope', sans-serif!important;
 .tooltip .arrow{
 background-color:#eef1ff!important;	
 }
+.btn:hover{
+background-color:#5277ff!important;	
+}
 label {
     font-weight: normal;
     color: #373d3f;
@@ -362,9 +365,10 @@ border:none;
 body.admin_account_login .subcontent button{
    width: 100%!important;
     border-radius: 5px!important;
-    height: 40px;
+    height: 50px;
  margin-top:20px!important;
 	color: #fff!important;
+	font-size:18px;
 }
 #loginForm,#signupForm,#forgotpasswordForm{
 padding-top:100px;
